<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:yourapp="http://schemas.android.com/apk/res-auto">

	<item
		android:id="@+id/my_action_search"
		android:icon="@android:drawable/ic_menu_search"
		android:title="@string/search"
		android:titleCondensed="@string/store"
		yourapp:actionViewClass="com.bookStore.App.MySearchView"
		yourapp:showAsAction="ifRoom|collapseActionView" />

	<item
		android:id="@+id/menu_calculate"
		android:icon="@drawable/ic_menu_calculate"
		android:title="@string/action_calculate" />

	<item
		android:id="@+id/menu_store_persons"
		android:icon="@drawable/ic_action_persons"
		android:title="@string/cards"
		yourapp:showAsAction="always" />

	<item
		android:id="@+id/menu_bring_books"
		android:icon="@android:drawable/ic_menu_add"
		android:title="@string/bring_books">
		<menu></menu>
	</item>

	<item
		android:id="@+id/store_menu_reports"
		android:icon="@android:drawable/ic_menu_report_image"
		android:title="@string/reports" />
	<item
		android:id="@+id/store_menu_calculate"
		android:icon="@drawable/ic_calculate"
		android:title="@string/recount" />

	<item
		android:id="@+id/store_menu_preference"
		android:icon="@drawable/ic_action_settings"
		android:title="@string/settings" />

</menu>