<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:orientation="vertical">

	<LinearLayout style="@style/lineItemHorizontalColor">

		<TextView
			android:id="@+id/additionPersonName"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:layout_marginLeft="7sp"
			android:text="@string/name"
			android:textAppearance="?android:attr/textAppearanceLarge"
			android:textColor="@android:color/white" />

		<Button
			android:id="@+id/additionDate"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/date" />

	</LinearLayout>

	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="@dimen/doubleLineHeight"
		android:gravity="center_vertical"
		android:orientation="horizontal">

		<TextView
			android:id="@+id/additionBookName"
			android:layout_width="0dp"
			android:layout_height="@dimen/lineHeightHalf"
			android:layout_weight="1"
			android:text="@string/nameOfBook"
			android:textSize="20sp" />

		<Button
			android:id="@+id/additionSelectionMy"
			style="@style/btnMedium"
			android:text="@string/my" />

		<Button
			android:id="@+id/additionSelectionStore"
			style="@style/btnMedium"
			android:text="@string/store" />
	</LinearLayout>

	<View style="@style/horizontalLineSeparator" />

	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="12sp"
		android:orientation="horizontal">

		<LinearLayout
			android:layout_width="fill_parent"
			android:layout_height="fill_parent"
			android:layout_weight="33"
			android:orientation="vertical">

			<TextView
				android:id="@+id/additionGetLabel"
				android:layout_width="fill_parent"
				android:layout_height="@dimen/lineHeightHalf"
				android:layout_weight="50"
				android:text="@string/get"
				android:textColor="@color/get_color"
				android:textSize="14sp" />

			<EditText
				android:id="@+id/additionGetText"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_weight="50"
				android:hint="@string/no"
				android:inputType="number"
				android:textColor="@color/get_color" />
		</LinearLayout>

		<!-- <View style="@style/gradientVerticalLine" /> -->

		<LinearLayout
			android:layout_width="fill_parent"
			android:layout_height="fill_parent"
			android:layout_weight="33"
			android:orientation="vertical">

			<TextView
				android:id="@+id/additionDistrLabel"
				android:layout_width="fill_parent"
				android:layout_height="@dimen/lineHeightHalf"
				android:layout_weight="50"
				android:text="@string/distrib"
				android:textColor="@color/distr_color"
				android:textSize="14sp" />

			<EditText
				android:id="@+id/additionDistrText"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_weight="50"
				android:hint="@string/no"
				android:inputType="number"
				android:textColor="@color/distr_color" />
		</LinearLayout>

		<!-- <View style="@style/gradientVerticalLine" /> -->

		<LinearLayout
			android:layout_width="fill_parent"
			android:layout_height="fill_parent"
			android:layout_weight="33"
			android:orientation="vertical">

			<TextView
				android:id="@+id/additionRetLabel"
				android:layout_width="fill_parent"
				android:layout_height="@dimen/lineHeightHalf"
				android:layout_weight="50"
				android:text="@string/returnn"
				android:textColor="@color/ret_color"
				android:textSize="14sp" />

			<EditText
				android:id="@+id/additionRetText"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_weight="50"
				android:hint="@string/no"
				android:inputType="number"
				android:textColor="@color/ret_color" />
		</LinearLayout>
	</LinearLayout>

	<View style="@style/horizontalLineSeparator" />

	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="10sp" />

	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:gravity="center_vertical"
		android:orientation="horizontal"
		android:weightSum="100">

		<Button
			android:id="@+id/additionSave"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_weight="33"
			android:text="@string/save" />

		<Button
			android:id="@+id/additionSaveAndNew"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_weight="33"
			android:text="@string/SaveAndNew" />

		<Button
			android:id="@+id/additionCancel"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_weight="33"
			android:text="@string/cancel" />
	</LinearLayout>

</LinearLayout>