<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:yourapp="http://schemas.android.com/apk/res-auto">

	<item
		android:id="@+id/my_action_search"
		android:icon="@android:drawable/ic_menu_search"
		android:title="@string/search"
		android:titleCondensed="@string/store"
		yourapp:actionViewClass="com.bookStore.App.MySearchView"
		yourapp:showAsAction="always|collapseActionView" />

	<item
		android:id="@+id/menu_store_persons"
		android:icon="@drawable/ic_action_persons"
		android:title="@string/cards"
		yourapp:showAsAction="always" />

	<item
		android:id="@+id/overflowItemMenu"
		android:icon="@drawable/ic_action_overflow"
		yourapp:showAsAction="always" />

</menu>

	<!--android.support.v7.widget.SearchView--><!--com.bookStore.App.MySearchView--><!--collapseActionView-->