<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:orientation="vertical">

	<LinearLayout
		android:id="@+id/personCard_panel"
		android:orientation="vertical"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:background="@color/panelSingleOut">

		<LinearLayout
			android:id="@+id/linearLayout1"
			style="@style/lineItemHorizontal">

			<ImageView
				android:id="@+id/personCard_btnPreviousDate"
				android:layout_width="@dimen/btnWidthSmall"
				android:layout_height="@dimen/btnWidthSmall"
				android:src="@drawable/ic_action_previous_item"
				android:layout_marginLeft="1dp"
				android:clickable="true"
				android:visibility="invisible"
				android:background="@drawable/image_selector" />

			<TextView
				android:id="@+id/personCard_cardDate"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginLeft="6sp"
				android:text="@string/date"
				android:clickable="true"
				android:paddingLeft="10dp"
				android:paddingRight="10dp"
				android:textSize="18sp" />

			<TextView
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_weight="1" />

			<TextView
				android:id="@+id/personCard_cardSum"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/count0"
				android:clickable="true"
				android:background="@drawable/image_selector"
				android:paddingLeft="10dp"
				android:paddingRight="10dp"
				android:textSize="18sp" />

			<TextView
				android:id="@+id/personCard_percent"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:clickable="true"
				android:background="@drawable/image_selector"
				android:textSize="18sp"
				android:paddingLeft="10dp"
				android:paddingRight="10dp" />

			<ImageView
				android:id="@+id/personCard_btnNextDate"
				android:layout_width="@dimen/btnWidthSmall"
				android:layout_height="@dimen/btnWidthSmall"
				android:src="@drawable/ic_action_next_item"
				android:layout_marginRight="1dp"
				android:clickable="true"
				android:visibility="invisible"
				android:background="@drawable/image_selector" />
		</LinearLayout>

		<!--<View style="@style/horizontalLine"/>-->

		<LinearLayout
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal">

			<TextView
				android:id="@+id/personCard_confirmation"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:textSize="18sp"
				android:layout_marginLeft="10dp"
				android:paddingLeft="5dp"
				android:paddingRight="5dp"
				android:background="@drawable/image_selector"
				android:text="@string/conduct_NO" />

			<TextView
				android:id="@+id/personCard_mark"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:textSize="18sp"
				android:paddingLeft="10dp"
				android:paddingBottom="4dp"
				android:layout_weight="1"
				android:clickable="true"
				android:layout_marginLeft="5dp"
				android:layout_marginRight="10dp"
				android:background="@drawable/image_selector"
				android:gravity="center_horizontal"
				android:hint="@string/note" />

		</LinearLayout>
	</LinearLayout>

	<LinearLayout
		android:id="@+id/cardActivityHiddenLinear"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal">

		<TextView
			style="@style/cardTextViewEntry"
			android:textColor="@color/GreenRemainder"
			android:textSize="12sp"
			android:paddingLeft="4dp"
			android:text="@string/shortenRemainder"
			android:textStyle="bold" />

		<TextView
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			style="@style/cardTextViewEntry"
			android:textSize="12sp"
			android:layout_marginLeft="@dimen/marginLeft"
			android:text="@string/bookName"
			android:layout_weight="1" />


		<TextView
			style="@style/cardTextViewEntry"
			android:textColor="@color/get_color"
			android:text="@string/shortenGet"
			android:textSize="12sp" />

		<TextView
			style="@style/cardTextViewEntry"
			android:textSize="12sp"
			android:textColor="@color/distr_color"
			android:text="@string/shortenDistr" />

		<TextView
			style="@style/cardTextViewEntry"
			android:textSize="12sp"
			android:textColor="@color/ret_color"
			android:text="@string/shortenRet" />

	</LinearLayout>

	<View style="@style/horizontalLineSeparator" />

	<ListView
		android:id="@android:id/list"
		android:layout_width="fill_parent"
		android:layout_height="0dip"
		android:layout_weight="1"
		android:drawSelectorOnTop="false" />

</LinearLayout>