<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:orientation="vertical">

	<LinearLayout style="@style/FragmentDialogActionBarLinearLayout">

		<TextView
			android:id="@+id/personDialogTitle"
			style="@style/DialogTittle"
			android:text="@string/enterNewName" />

	</LinearLayout>

	<LinearLayout
		style="@style/DialogCenterLinearLayout"
		android:orientation="vertical">

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal">

			<EditText
				android:id="@+id/personDialogName"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_weight="4"
				android:hint="@string/name" />

			<EditText
				android:id="@+id/personDialogPercent"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:hint="@string/aHundredPercent"
				android:inputType="number" />

		</LinearLayout>

		<!--<View style="@style/horizontalLineSeparator" />-->

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal">

			<Button
				android:id="@+id/personDialogOk"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:background="@drawable/btn_selector_left"
				android:text="@android:string/ok" />

			<Button
				android:id="@+id/personDialogCancel"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:background="@drawable/btn_selector_right"
				android:text="@android:string/cancel" />

		</LinearLayout>


	</LinearLayout>


</LinearLayout>